[gd_scene load_steps=2 format=3 uid="uid://nsqth8rhhj6e"]

[ext_resource type="Script" path="res://signup.gd" id="1_0gnc0"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0gnc0")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "username:"

[node name="Username" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "password:"

[node name="Pwd" type="LineEdit" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
secret = true

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "email:"

[node name="Email" type="LineEdit" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_vertical = 0

[node name="MessageLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="SignUpButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Sign up
"

[node name="LoginButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Log in"

[connection signal="pressed" from="VBoxContainer/SignUpButton" to="." method="_on_button_pressed"]
[connection signal="pressed" from="VBoxContainer/LoginButton" to="." method="_on_login_button_pressed"]
